2005-08-21  Owen Taylor  <otaylor@redhat.com>

	* autogen.sh: When invoked as, say, ../autogen.sh, switch to
	the sourcedir to run the auto*. Based on corresponding code
	in GTK+'s autogen.sh. (#3402, Thomas Fitzsimmons)

	* gtk-doc.make: Update from gtk-doc CVS, bringing in some
	minor output changes. (Eliminate the *** from the messages
	that don't indicate errors.)

	* doc/public/Makefile.am (EXTRA_DIST): Use += for EXTRA_DIST,
	since gtk-doc.make already defines it.

2005-08-21  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Check for FT_Load_Sfnt_Table and disable
	the PDF/PS backends if not found. (#4144, Billy Biggs)

2005-08-21  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-surface.c (_cairo_surface_clone_similar): Fix the
	handling of backend->clone_similar == NULL. (#4161,
	Christian Biesinger)
	
2005-08-21  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-surface.c: Improve the documentation of internal
	functions. (Based on a patch from Christian Biesinger, #4162)

2005-08-21  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-surface.c (_cairo_xlib_surface_create_internal):
	Recognize gentoo's (and maybe other distro's) modified
	server vendor string, where extra text is added to the
	upstream value. (#4068, reported by Doug Goldstein, others.
	Patch from Mart Raudsepp)

2005-08-21  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-ft-font.c (_cairo_ft_unscaled_font_create_glyph): 
	Don't try to transform val->image when it is NULL.
	(#4163, Mathias Hasselmann)

2005-08-20  Carl Worth  <cworth@cworth.org>

	Fix for bug #4142:

	* test/cairo-test.c (create_xlib_surface): Disable xlib tests on X
	servers without the Render, since they currently just crash
	there. A better long-term fix would be to do some useful tests in
	this case. Thanks to Tim Mooney.

2005-08-20  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-surface.c (_cairo_xlib_surface_create_internal): 
	Include Xfree86-4.5 in the blacklist. (Reported by 
	Andrew Benton)
